# soundscapes-backend

./: README.md  backend.opam  dune-project
backend/: README.md
backend/lib/db/: db.ml  dune
backend/lib/types/: types.ml
backend/schemes/: swagger.json
backend/src/: dune  main.ml
frontend/: fresh.gen.ts  import_map.json
frontend/components/: Axiom.tsx  MathJax.tsx  Navbar.tsx  ProofTree.tsx  Template.tsx
frontend/helpers/: api.ts  auth.ts  encoders.ts  types.ts
frontend/islands/: LoadMath.tsx  Message.tsx  Navbar.tsx
frontend/routes/: _404.tsx  dashboard.tsx  index.tsx  login.tsx  register.tsx
lib/db/: db.ml
lib/types/: dune  types.ml
