(lang dune 3.7)

(name backend)

(generate_opam_files true)

(source
 (github ProgramingIsTheFuture/PWebProject))

(authors "Francisco Santos")

(maintainers "Francisco Santos")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name backend)
 (synopsis "Web programing final project")
 (depends ocaml dune opium))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
